force-app/main/default/objects/Shipment_Line__c/Shipment_Line__c.object-meta.xml
<CustomObject>
    <label>Shipment Line</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Shipment Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>