force-app/main/default/objects/Shipment_Line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>R00N50000001gPInEAM</relationshipName>
    <type>Lookup</type>
</CustomField>