force-app/main/default/objects/Shipment_Line__c/fields/Account_Cust_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Cust_Id__c</fullName>
    <formula>Account__r.QWBS_Cust_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Cust Id</label>
    <type>Text</type>
</CustomField>