force-app/main/default/objects/Shipment_Line__c/fields/Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date__c</fullName>
    <formula>Shipped_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Ship Date</label>
    <type>Date</type>
</CustomField>