force-app/main/default/objects/Shipment_Line__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>