force-app/main/default/objects/Shipment_Line__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <label>Item ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>