force-app/main/default/objects/Shipment_Line__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Type</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>R00N50000001gCkvEAE</relationshipName>
    <type>Lookup</type>
</CustomField>