force-app/main/default/objects/Shipment_Line__c/fields/Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Id__c</fullName>
    <externalId>true</externalId>
    <label>Line Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>