force-app/main/default/objects/Shipment_Line__c/fields/Oracle_Sales_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Sales_Order_ID__c</fullName>
    <label>Oracle Sales Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>