force-app/main/default/objects/Shipment_Line__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B2B 82</fullName>
            </value>
            <value>
                <fullName>BETA 82</fullName>
            </value>
            <value>
                <fullName>EVAL 82</fullName>
            </value>
            <value>
                <fullName>INTERCO EUROPE 82</fullName>
            </value>
            <value>
                <fullName>INTERNAL 82</fullName>
            </value>
            <value>
                <fullName>INTRA 87</fullName>
            </value>
            <value>
                <fullName>LAB 82</fullName>
            </value>
            <value>
                <fullName>LOAN 82</fullName>
            </value>
            <value>
                <fullName>METRO CONT 82</fullName>
            </value>
            <value>
                <fullName>REFURB 82</fullName>
            </value>
            <value>
                <fullName>RENT 82</fullName>
            </value>
            <value>
                <fullName>RMA 82</fullName>
            </value>
            <value>
                <fullName>RMA 87</fullName>
            </value>
            <value>
                <fullName>RMA 87 I</fullName>
            </value>
            <value>
                <fullName>RTS 82</fullName>
            </value>
            <value>
                <fullName>RTS 86</fullName>
            </value>
            <value>
                <fullName>SALE 82</fullName>
            </value>
            <value>
                <fullName>SAMP 82</fullName>
            </value>
            <value>
                <fullName>SURPLUS SALE 82</fullName>
            </value>
            <value>
                <fullName>T&amp;L CONT 82</fullName>
            </value>
            <value>
                <fullName>WEB 82</fullName>
            </value>
            <value>
                <fullName>WEB SC 82</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>