force-app/main/default/objects/Shipment_Line__c/fields/Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the batch Customer Asset forecast update process to determine whether this record needs to be processed to update the Customer Asset actuals or to create an addon Amendment. If checked, it means that this record has already been reconciled with Customer Asset actuals.</description>
    <inlineHelpText>If checked, this record has already been reconciled with Customer Asset actuals.</inlineHelpText>
    <label>Reconciled</label>
    <type>Checkbox</type>
</CustomField>