force-app/main/default/objects/Shipment_Line__c/fields/Shipment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Summary</label>
    <referenceTo>Shipment_Summary__c</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>R00N50000001gClnEAE</relationshipName>
    <type>Lookup</type>
</CustomField>