force-app/main/default/objects/Shipment_Line__c/fields/Unit_Activity__c.field-meta.xml
<CustomField>
    <fullName>Unit_Activity__c</fullName>
    <label>Unit Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>