force-app/main/default/objects/Shipment_Line__c/listViews/AllShipmentLines.listView-meta.xml
<ListView>
    <fullName>AllShipmentLines</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_Id__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Oracle_Sales_Order_ID__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Shipped_Date__c</columns>
    <columns>Shipped_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Shipment Lines</label>
    <language>en_US</language>
</ListView>