force-app/main/default/objects/Shipment_Line__c/listViews/OVMShipments.listView-meta.xml
<ListView>
    <fullName>OVMShipments</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Item_Description__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Scheduled_Ship_Date__c</columns>
    <columns>Shipped_Quantity__c</columns>
    <columns>Shipped_Date__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Line_Id__c</columns>
    <columns>Oracle_Sales_Order_ID__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Requested_Quantity__c</columns>
    <columns>Requested_Ship_Date__c</columns>
    <columns>Shipment_Summary__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>Omnivision Metro</value>
    </filters>
    <filters>
        <field>Item_Description__c</field>
        <operation>contains</operation>
        <value>OVM,Metro,MRMR</value>
    </filters>
    <label>OVM Shipments</label>
    <language>en_US</language>
    <sharedTo>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>